# dirac

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  build.sh  fierz.tex
examples/: common.rb  fierz6.rb  tests.rb
examples/fierz_gen/: Expression.cpp  Expression.hpp  Identity.hpp  Printer.cpp  Printer.hpp  algorithms.cpp  algorithms.hpp  defs.hpp  main.cpp
src/: App.cpp  App.hpp  Compiler.cpp  Compiler.h  Compiler.hpp  ExprPrinter.cpp  ExprPrinter.hpp  Input.cpp  Input.h  InputSequence.h  InputSequence.hpp  Interpreter.cpp  Interpreter.hpp  Operations.cpp  Operations.hpp  StringInput.cpp  StringInput.h  StringInput.hpp  Symbolic.cpp  Symbolic.hpp  Tensor.cpp  Tensor.h  Token.cpp  Token.h  Token.hpp  algebra.cpp  algebra.h  concepts.hpp  eval.cpp  eval.h  eval.hpp  main.cpp  utils.cpp  utils.hpp
src/algebra/: Complex.hpp  Gamma.cpp  Gamma.hpp  GammaMatrix.cpp  GammaMatrix.hpp  IndexId.hpp  LorentzInvariant.cpp  LorentzInvariant.hpp  Permutations.cpp  Permutations.hpp  Polynomials.hpp  PseudoMatrix.cpp  PseudoMatrix.h  PseudoMatrix.hpp  Rational.cpp  Rational.hpp  TensorBase.hpp  Tensorial.h  Tensorial.hpp
